Web Inspector: Inherited selector rows have text too low https://bugs.webkit.org/show_bug.cgi?id=154489 <rdar://problem/24754774>
Reviewed by Timothy Hatcher.

* UserInterface/Views/VisualStyleSelectorSection.css:
(.details-section.visual-style-selector-section > .content > .selectors > .selector-list > .section-divider):


Canonical link: https://commits.webkit.org/172597@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196855 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/VisualStyleSelectorSection.css
+++ b/Source/WebInspectorUI/UserInterface/Views/VisualStyleSelectorSection.css
@@ -102,8 +102,7 @@
 .details-section.visual-style-selector-section > .content > .selectors > .selector-list > .section-divider {
     position: -webkit-sticky;
     top: -1px;
-    height: 17px;
-    padding: 2px;
+    height: 19px;
     background-color: hsl(0, 0%, 95%);
     border-color: var(--border-color);
     border-style: solid;
